Lidhja e Titujve ne header me rubrika

--- a/kronike.html
+++ b/kronike.html
@@ -94,19 +94,17 @@
                 Rishi Sunak kanë komplotuar lëvizjen e tyre të radhës kundër qeverisë.
             </div>
         </div>
-        
-        <div class="box" onclick="openLink('Lajmi5.html')">
-            <img src="foto5.png" />
-            <h4>Kompletohen 16 ekipet e mbetura në garë për Kupën e Kosovës,
-                caktohet edhe data e shortit</h4>
+        <div class="box" onclick="openLink('Lajmi4.html')">
+            <img src="foto4.png" />
+            <h4>BE njofton për 125 milionë euro ndihmë humanitare për palestinezët</h4>
             <div class="date">
                 <p>10-12-2023</p>
             </div>
             <div class="desc">
-                Dinamo ka kompletuar numrin e skuadrave që do të jenë pjesëmarrëse në 1/8 e
-                finales së Kupës së Kosovës në futboll.
+                BE njofton për 125 milionë euro ndihmë humanitare për palestinezët.
             </div>
         </div>
+        
         <div class="box" onclick="openLink('Lajmi6.html')">
             <img src="foto6.png" />
             <h4>Dyshohet se keqpërdorën ujin e ujësjellësit, fabrika ‘Spirit of Drini’ procedohet në Prokurori</h4>
