--- a/kulture.html
+++ b/kulture.html
@@ -70,17 +70,7 @@
                 vizitua babai i tij, raporton Gazeta Sinjali.
             </div>
         </div>
-        <div class="box" onclick="openLink('Lajmi2.html')">
-            <img src="foto2.png" />
-            <h4>A e dini se stina e dimrit dëmton baterinë e celularit tuaj? Arsyet do t’iu befasojnë</h4>
-            <div class="date">
-                <p>07-12-2023</p>
-            </div>
-            <div class="desc">
-                Gjithçka që bëjnë telefonat tanë, është me të vërtetë e mrekullueshme.
-                Por ka një gjë që nuk e bëjnë dot mirë: t’i rezistojnë motit të ftohtë.
-            </div>
-        </div>
+        
         <div class="box" onclick="openLink('Lajmi3.html')">
             <img src="foto3.png" />
             <h4>Zbulohet plani anti-Sunak, Boris Johnson rikthehet si kryeministër në koalicion me “babain” e Brexit
@@ -94,7 +84,16 @@
                 Rishi Sunak kanë komplotuar lëvizjen e tyre të radhës kundër qeverisë.
             </div>
         </div>
-        
+        <div class="box" onclick="openLink('Lajmi4.html')">
+            <img src="foto4.png" />
+            <h4>BE njofton për 125 milionë euro ndihmë humanitare për palestinezët</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                BE njofton për 125 milionë euro ndihmë humanitare për palestinezët.
+            </div>
+        </div>
         <div class="box" onclick="openLink('Lajmi5.html')">
             <img src="foto5.png" />
             <h4>Kompletohen 16 ekipet e mbetura në garë për Kupën e Kosovës,
