--- a/shendetesi.html
+++ b/shendetesi.html
@@ -56,20 +56,7 @@
     </header>
 
     <main>
-        <div class="box" onclick="openLink('Lajmi1.html')">
-            <img src="foto1.png" />
-            <h4>Naim Murseli përballet me babanë për herë të parë pas arrestimit, akuzon Policinë për keqtrajtim</h4>
-            <div class="date">
-                <p>09-12-2023</p>
-            </div>
-            <div class="desc">
-                Vrasja mizore e Liridona Admeajt, krim ky që tronditi vendin para disa javësh po vazhdon të hetohet,
-                ndërkohë që pistat po zgjerohen dhe akoma nuk është konfirmuar motivi i rastit tragjik.
-                Tre persona ndodhen në paraburgim, teksa i dyshuari i fundit u arrestua sot nga Policia.
-                Naim Murseli – burri i të ndjerës ndodhet në Burgun e Sigurisë së Lartë, ku para disa ditësh e ka
-                vizitua babai i tij, raporton Gazeta Sinjali.
-            </div>
-        </div>
+        
         <div class="box" onclick="openLink('Lajmi2.html')">
             <img src="foto2.png" />
             <h4>A e dini se stina e dimrit dëmton baterinë e celularit tuaj? Arsyet do t’iu befasojnë</h4>
@@ -94,7 +81,16 @@
                 Rishi Sunak kanë komplotuar lëvizjen e tyre të radhës kundër qeverisë.
             </div>
         </div>
-        
+        <div class="box" onclick="openLink('Lajmi4.html')">
+            <img src="foto4.png" />
+            <h4>BE njofton për 125 milionë euro ndihmë humanitare për palestinezët</h4>
+            <div class="date">
+                <p>10-12-2023</p>
+            </div>
+            <div class="desc">
+                BE njofton për 125 milionë euro ndihmë humanitare për palestinezët.
+            </div>
+        </div>
         <div class="box" onclick="openLink('Lajmi5.html')">
             <img src="foto5.png" />
             <h4>Kompletohen 16 ekipet e mbetura në garë për Kupën e Kosovës,
