--- a/sport.html
+++ b/sport.html
@@ -81,20 +81,17 @@
                 Por ka një gjë që nuk e bëjnë dot mirë: t’i rezistojnë motit të ftohtë.
             </div>
         </div>
-        <div class="box" onclick="openLink('Lajmi3.html')">
-            <img src="foto3.png" />
-            <h4>Zbulohet plani anti-Sunak, Boris Johnson rikthehet si kryeministër në koalicion me “babain” e Brexit
-            </h4>
+        
+        <div class="box" onclick="openLink('Lajmi4.html')">
+            <img src="foto4.png" />
+            <h4>BE njofton për 125 milionë euro ndihmë humanitare për palestinezët</h4>
             <div class="date">
-                <p>07-12-2023</p>
+                <p>10-12-2023</p>
             </div>
             <div class="desc">
-                Mbi pjatat me ravioli dhe mëlçi viçi, të shoqëruara me verë të kuqe nga Italia e jugut, armiqtë politikë
-                të
-                Rishi Sunak kanë komplotuar lëvizjen e tyre të radhës kundër qeverisë.
+                BE njofton për 125 milionë euro ndihmë humanitare për palestinezët.
             </div>
         </div>
-        
         <div class="box" onclick="openLink('Lajmi5.html')">
             <img src="foto5.png" />
             <h4>Kompletohen 16 ekipet e mbetura në garë për Kupën e Kosovës,
