--- a/HomePage.html
+++ b/HomePage.html
@@ -20,23 +20,23 @@
         <nav>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li><a href="#">lajme</a></li>
-                <li><a href="#">kronikë</a></li>
-                <li><a href="#">shëndetësi</a></li>
+                <li onclick="openLink('HomePage.html')"><a href="#">lajme</a></li>
+                <li onclick="openLink('kronike.html')"><a href="#">kronikë</a></li>
+                <li onclick="openLink('shendetesi.html')"><a href="#">shëndetësi</a></li>
                 <li onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
-                <li><a href="#">kulture</a></li>
-                <li><a href="#">sport</a></li>
+                <li onclick="openLink('kulture.html')"><a href="#">kulture</a></li>
+                <li onclick="openLink('sport.html')"><a href="#">sport</a></li>
                 <li onclick="openLink('LogInForm.html')"><a href="#">Sign In</a></li>
                 <li onclick="openLink('RegisterForm.html')"><a href="#">Sign Up</a></li>
             </ul>
                 <ul>
-                    <li class="largo"><a href=""><strong>Ylldrit & Leutrim</strong></a></li>
-                    <li class="hideOnMobile" ><a href="#">lajme</a></li>
-                    <li class="hideOnMobile"><a href="#">kronikë</a></li>
-                    <li class="hideOnMobile"><a href="#">shëndetësi</a></li>
-                    <li onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
-                    <li class="hideOnMobile"><a href="#">kulture</a></li>
-                    <li class="hideOnMobile"><a href="#">sport</a></li>
+                    <li class="largo"><a href="HomePage.html"><strong>Ylldrit & Leutrim</strong></a></li>
+                    <li class="hideOnMobile" onclick="openLink('HomePage.html')"><a href="#">lajme</a></li>
+                    <li class="hideOnMobile" onclick="openLink('kronike.html')"><a href="#">kronikë</a></li>
+                    <li class="hideOnMobile" onclick="openLink('shendetesi.html')"><a href="#">shëndetësi</a></li>
+                    <li class="hideOnMobile" onclick="openLink('ekonomi.html')"><a href="#">ekonomi</a></li>
+                    <li class="hideOnMobile" onclick="openLink('kulture.html')"><a href="#">kulture</a></li>
+                    <li class="hideOnMobile" onclick="openLink('sport.html')"><a href="#">sport</a></li>
                     <li class="hideOnMobile" onclick="openLink('LogInForm.html')"><a href="#">Sign In</a></li>
                     <li class="hideOnMobile" onclick="openLink('RegisterForm.html')"><a href="#">Sign Up</a></li>
                     <li class="butoni" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
@@ -453,7 +453,7 @@
             <ul>
             <li><a href="#">home</a></li>
             <li><a href="#">news</a></li>
-            <li><a href="#">about us</a></li>
+            <li onclick="openLink('about us.html')"><a href="#">about us</a></li>
             <li><a href="#">contact us</a></li>
             <li><a href="#">our team</a></li>
         </ul>
