--- a/HomePage.html
+++ b/HomePage.html
@@ -454,8 +454,8 @@
             <li><a href="#">home</a></li>
             <li><a href="#">news</a></li>
             <li onclick="openLink('about us.html')"><a href="#">about us</a></li>
-            <li onclick="openLink('contact us.html')"><a href="#">contact us</a></li>
-            <<li onclick="openLink('our team.html')"><a href="#">our team</a></li>
+            <li><a href="#">contact us</a></li>
+            <li><a href="#">our team</a></li>
         </ul>
         </div>
         </div>
