HTML to PHP/Database
Ketu eshte bere transformimi i lajmeve nga forma statike me html ne ate dinamike duke perdorur databazen dhe php

--- a/Lajmet/Lajmi1.html
+++ b/Lajmet/Lajmi1.html
@@ -22,7 +22,7 @@
                 keqtrajtim</h1>
         </div>
         <div class="image">
-            <img src="foto1.png" alt="foto">
+            <img src="Foto/foto1.png" alt="foto">
         </div>
         <div>
             <h3>Vrasja mizore e Liridona Admeajt, krim ky që tronditi vendin para disa javësh
